<resources>
    <string name="yuan">元</string>
    <string name="mvp">MVP</string>
    <string name="yes">是的</string>
    <string name="use">使用</string>
    <string name="stop">停止</string>
    <string name="wait">等下</string>
    <string name="date">日期</string>
    <string name="send">发送</string>
    <string name="look">看看</string>
    <string name="start">开始</string>
    <string name="check">检查</string>
    <string name="voice">心声</string>
    <string name="pause">暂停</string>
    <string name="renMinBi">¥</string>
    <string name="resume">恢复</string>
    <string name="amount">金额</string>
    <string name="camera">相机</string>
    <string name="modify">修改</string>
    <string name="logOut">退出</string>
    <string name="author">作者</string>
    <string name="listen">听听</string>
    <string name="zhiLin">知林</string>
    <string name="update">更新</string>
    <string name="xiZang">西藏</string>
    <string name="disable">禁用</string>
    <string name="qingHai">青海</string>
    <string name="history">历史</string>
    <string name="release">释放</string>
    <string name="capture">拍照</string>
    <string name="endItem">末条</string>
    <string name="portrait">竖屏</string>
    <string name="nextItem">下张</string>
    <string name="floating">悬浮</string>
    <string name="xinJiang">新疆</string>
    <string name="app_name">知伴</string>
    <string name="heartBox">心盒</string>
    <string name="function">功能</string>
    <string name="category">类目</string>
    <string name="iKnow">我知道啦</string>
    <string name="landscape">横屏</string>
    <string name="interview">面试</string>
    <string name="dangerous">险情</string>
    <string name="twoColumn">两列</string>
    <string name="firstItem">头条</string>
    <string name="accountTwo">账单</string>
    <string name="fullScreen">全屏</string>
    <string name="threeColumn">三列</string>
    <string name="useGuide">使用指南</string>
    <string name="exampleOne">示例一</string>
    <string name="exampleTwo">示例二</string>
    <string name="exampleSix">示例六</string>
    <string name="previousItem">上张</string>
    <string name="inputCall">输入称呼</string>
    <string name="hintAgain">再次提示</string>
    <string name="resetData">重置数据</string>
    <string name="sendQuickly">快发送</string>
    <string name="exampleFour">示例四</string>
    <string name="exampleFive">示例五</string>
    <string name="deleteData">删除数据</string>
    <string name="saveConfig">保存配置</string>
    <string name="addAccount">添加账目</string>
    <string name="cleanCache">清理缓存</string>
    <string name="todaySpent">今天花了</string>
    <string name="exampleThree">示例三</string>
    <string name="exampleSeven">示例七</string>
    <string name="recentVoice">最近心声</string>
    <string name="inputAmount">输入金额</string>
    <string name="openAccount">打开账单</string>
    <string name="customView">自定义视图</string>
    <string name="historyPoint">历史要点</string>
    <string name="monthOnMonth">月度环比</string>
    <string name="todayAccount">今日账目</string>
    <string name="yearAnalysis">年度分析</string>
    <string name="moreFunction">更多功能</string>
    <string name="exportAccount">导出账单</string>
    <string name="accountDetail">账目详情</string>
    <string name="monthAnalysis">月度分析</string>
    <string name="hasBeenPlaced">安放过啦</string>
    <string name="switchCamera">切换摄像头</string>
    <string name="interviewPoint">面试要点</string>
    <string name="aGlimmerOfHope">微光心声</string>
    <string name="startAnimation">启动动画</string>
    <string name="chooseCategory">选择类目</string>
    <string name="restoreDefault">恢复默认</string>
    <string name="restoreAccount">恢复账目</string>
    <string name="smsSendFail">短信发送失败</string>
    <string name="metalDetected">探测到金属</string>
    <string name="largestConsumer">最大消费</string>
    <string name="dangerousNotice">险情通知</string>
    <string name="accountAnalysis">账目分析</string>
    <string name="configNoChange">配置无变化</string>
    <string name="configSuccessful">配置成功</string>
    <string name="updateSuccessful">更新成功</string>
    <string name="noCacheAvailable">暂无缓存</string>
    <string name="everydayAnalysis">每日分析</string>
    <string name="modifySuccessful">修改成功</string>
    <string name="returnToThisYear">回到今年</string>
    <string name="smsDeliverFail">短信送达失败</string>
    <string name="smsHasBeenSent">短信发送成功</string>
    <string name="switchResolution">切换分辨率</string>
    <string name="updatingLocation">更新定位中</string>
    <string name="serviceIsRunning">服务运行中</string>
    <string name="noAccountAvailable">暂无账目</string>
    <string name="applicationSetting">应用设置</string>
    <string name="homeComeBackground">归心背景</string>
    <string name="dataHasBeenDeleted">数据已删除</string>
    <string name="internalBackupFail">内备份失败</string>
    <string name="externalBackupFail">外备份失败</string>
    <string name="inPeriodicOperation">周期运行中</string>
    <string name="inFloatingOperation">悬浮运行中</string>
    <string name="smsHasBeenDelivered">短信已送达</string>
    <string name="releaseYourInnerVoice">释放心声</string>
    <string name="updateLocationFail">更新定位失败</string>
    <string name="cameraNotDetected">未检测到摄像头</string>
    <string name="restoreHomeComeData">恢复归心数据</string>
    <string name="hereToPlaceThoughts">这里安放思念</string>
    <string name="noYearDataAvailable">暂无年份数据</string>
    <string name="openNotificationHint">打开知伴通知</string>
    <string name="inputDangerousNotice">输入险情通知</string>
    <string name="accountHasBeenRestored">账目已恢复</string>
    <string name="wantToDeleteAccount">想要删除账目吗</string>
    <string name="rememberToKeepAccount">记得记账哦！</string>
    <string name="closeEverydayAnalysis">关闭每日分析</string>
    <string name="setAnimationSuccessful">设置动画成功</string>
    <string name="restoreDangerousConfig">恢复险情配置</string>
    <string name="noAccountDataAvailable">暂无账单数据</string>
    <string name="myThoughtsHaveNotChanged">思念没变哟</string>
    <string name="accountNotificationChinese">账目通知</string>
    <string name="enterIntoAccountSuccessful">入账成功</string>
    <string name="noHomeComeDataAvailable">暂无归心数据</string>
    <string name="wantToDeleteTheThought">想要删除思念吗</string>
    <string name="periodicNotificationChinese">周期通知</string>
    <string name="floatingNotificationChinese">悬浮通知</string>
    <string name="updateLocationSuccessful">更新定位成功</string>
    <string name="canNotGetLocationInfo">无法获取定位信息</string>
    <string name="yourHeartFeelsLighter">你的心轻了一点儿</string>
    <string name="alreadyIsDefaultAnimation">已是默认动画</string>
    <string name="deletionCannotBeRestored">删除后不可恢复</string>
    <string name="noDangerousConfigAvailable">暂无险情配置</string>
    <string name="restoreAnimationSuccessful">恢复动画成功</string>
    <string name="currentTheLatestVersion">当前已是最新版本</string>
    <string name="numberOfConsumptionTransactions">消费笔数</string>
    <string name="homeComeDataHasBeenRestored">归心数据已恢复</string>
    <string name="myHeartLittleColdAndSmile">心事微凉 笑一笑吧</string>
    <string name="noYearAnalysisDataAvailable">暂无年度分析数据</string>
    <string name="cameraAreBasedOnThePermission">拍照需要该权限</string>
    <string name="reactiveAsynchronousFramework">响应式异步框架</string>
    <string name="noMonthAnalysisDataAvailable">暂无月度分析数据</string>
    <string name="dangerousConfigHasBeenRestored">险情配置已恢复</string>
    <string name="failToObtainVersionInformation">获取版本信息失败</string>
    <string name="sendSmsAreBasedOnThePermission">发送短信需要该权限</string>
    <string name="accountNotificationEnglish">account notification</string>
    <string name="emailAndPhoneNumber">snpmyn@126.com\n13673541527</string>
    <string name="readImageAreBasedOnThePermission">读取图片需要该权限</string>
    <string name="periodicNotificationEnglish">periodic notification</string>
    <string name="floatingNotificationEnglish">floating notification</string>
    <string name="inputEmergencyContactPhoneNumber">输入紧急联系人手机号</string>
    <string name="hurryUpSendTheCoarseLocation">来不及了\n使用粗略位置发送</string>
    <string name="recordReadAudioAreBasedOnThePermission">录制读取音频需要该权限</string>
    <string name="receiveNotificationAreBasedOnThePermission">接收通知需要该权限</string>
    <string name="inputCorrectEmergencyContactPhoneNumber">输入正确的紧急联系人手机号</string>
    <string name="needToInputPhoneNumberToLoginAgainAfterLogOut">退出后需输入手机号重新登录</string>
    <string name="detectIllustrate">仅可探测\n铁、钢、镍、钴等磁性金属\n\n不可探测\n铜、铝、金、银、铅等非磁性金属</string>
    <!--widget - TabLayout-->
    <string name="tabLayoutTitleOne">TabOne</string>
    <string name="tabLayoutTitleTwo">TabTwo</string>
    <!-- format -->
    <string name="formatFpsNoValue">FPS %1$s</string>
    <string name="formatFpsWithValue">FPS %.1f</string>
    <string name="formatSsWithSpace">%1$s %2$s</string>
    <string name="formatSsWithLineBreak">%1$s\n%2$s</string>
    <string name="formatSdStudentCount">%1$s ( %2$d )</string>
</resources>