<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".module.account.AddAccountActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/addAccountActivityMt"
        style="@style/Widget.Material3.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/add_account_activity_menu"
        app:title="@string/addAccount"
        app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium.Emphasized" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAccountActivityMt">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_12"
            android:paddingTop="@dimen/dp_24"
            android:paddingRight="@dimen/dp_12"
            android:paddingBottom="@dimen/dp_24">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addAccountActivityTilChooseDate"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/chooseDate"
                android:textColorHint="?attr/colorPrimary"
                app:endIconDrawable="@drawable/ic_add_cos_20dp"
                app:endIconMode="custom"
                app:helperText="@string/date"
                app:startIconDrawable="@drawable/ic_calendar_today_cos_24dp"
                app:startIconTint="?attr/colorPrimary">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/addAccountActivityMactvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:inputType="none"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addAccountActivityTilChooseCategory"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_12"
                android:layout_marginBottom="@dimen/dp_12"
                android:hint="@string/chooseCategory"
                app:endIconDrawable="@drawable/ic_add_cos_20dp"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorTextColor="@color/color_FFEA6464"
                app:helperText="@string/category"
                app:startIconDrawable="@drawable/ic_category_cos_24dp"
                app:startIconTint="?attr/colorPrimary">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/addAccountActivityMactvCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addAccountActivityTilInputAmount"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inputAmount"
                app:counterEnabled="true"
                app:counterMaxLength="8"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:errorTextColor="@color/color_FFEA6464"
                app:helperText="@string/amount"
                app:prefixText="@string/renMinBi"
                app:startIconDrawable="@drawable/ic_wallet_cos_24dp"
                app:startIconTint="?attr/colorPrimary"
                app:suffixText="@string/yuan">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addAccountActivityTietAmount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="@dimen/sp_14" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>