<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/cameraActivityMt"
        style="@style/Widget.Material3.Toolbar.Surface"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorSurface"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/camera"
        app:titleCentered="true"
        app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium.Emphasized" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cameraActivityMt">

        <LinearLayout
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/dp_20">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cameraActivityMtSwitchCamera"
                style="?attr/materialButtonTonalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:filterTouchesWhenObscured="true"
                android:insetLeft="@dimen/dp_0"
                android:insetTop="@dimen/dp_0"
                android:insetRight="@dimen/dp_0"
                android:insetBottom="@dimen/dp_0"
                android:text="@string/switchCamera"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/cameraActivitySpinnerSwitchResolution"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginVertical="@dimen/dp_10"
                android:background="@drawable/spinner_background"
                android:padding="@dimen/dp_10" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cameraActivityMtCapture"
                style="?attr/materialButtonTonalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:filterTouchesWhenObscured="true"
                android:insetLeft="@dimen/dp_0"
                android:insetTop="@dimen/dp_0"
                android:insetRight="@dimen/dp_0"
                android:insetBottom="@dimen/dp_0"
                android:text="@string/capture"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cameraActivityMtLogOut"
                style="?attr/materialButtonTonalStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:filterTouchesWhenObscured="true"
                android:insetLeft="@dimen/dp_0"
                android:insetTop="@dimen/dp_0"
                android:insetRight="@dimen/dp_0"
                android:insetBottom="@dimen/dp_0"
                android:text="@string/logOut"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />
        </LinearLayout>

        <!--全景 app:scaleType="fitCenter"-->
        <androidx.camera.view.PreviewView
            android:id="@+id/cameraActivityPv"
            android:layout_width="@dimen/dp_0"
            android:layout_height="match_parent"
            android:layout_weight="3"
            app:scaleType="fitCenter" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>