<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<widget.carousel.two.CarouselView
        android:id="@+id/carouselActivityCv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_240"
        app:carouselAutoScroll="true"
        app:carouselEnableAlpha="true"
        app:carouselEnableScale="true"
        app:carouselItemWidth="@dimen/dp_180"
        app:carouselMinAlpha="0.50"
        app:carouselMinScale="0.75"
        app:carouselScrollInterval="3000"
        app:carouselScrollSpeed="120.0"
        app:layout_constraintBottom_toTopOf="@+id/carouselActivityMbtg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <widget.carousel.three.CarouselView
        android:id="@+id/carouselActivityCv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_240"
        app:carouselAutoScroll="false"
        app:carouselEnableAlpha="true"
        app:carouselEnableScale="true"
        app:carouselItemWidth="@dimen/dp_180"
        app:carouselMinAlpha="0.50"
        app:carouselMinScale="0.75"
        app:carouselScrollInterval="3000"
        app:carouselScrollSpeed="120.0"
        app:layout_constraintBottom_toTopOf="@+id/carouselActivityMbtg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/carouselActivityMbtg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/dp_24"
        android:spacing="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carouselActivityCv"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/carouselActivityMbFirstItem"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/firstItem"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/carouselActivityMbPreviousItem"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/previousItem"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/carouselActivityMbPause"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/pause"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/carouselActivityMbTurnLeft"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/turnLeft"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/carouselActivityMbTurnRight"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/turnRight"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/carouselActivityMbResume"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/resume"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/carouselActivityMbNextItem"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/nextItem"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/carouselActivityMbEndItem"
            style="?attr/materialButtonTonalStyle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            android:text="@string/endItem"
            android:textSize="@dimen/sp_12"
            android:textStyle="bold" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>