<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountDetailActivityRl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".module.account.AccountDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/accountDetailActivityMt"
        style="@style/Widget.Material3.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="?attr/colorSurface"
        app:menu="@menu/account_detail_activity_menu"
        app:title="@string/accountDetail"
        app:titleTextAppearance="@style/TextAppearance.Material3.TitleMedium.Emphasized" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accountDetailActivityRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/accountDetailActivityMt"
        android:scrollbars="none" />

    <widget.floatingactionbutton.DraggableFloatingActionButton
        android:id="@+id/accountDetailActivityDfab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/dp_24"
        android:layout_marginBottom="@dimen/dp_24"
        android:contentDescription="@string/everydayAnalysis"
        app:fabSize="auto"
        app:maxImageSize="@dimen/dp_24"
        app:srcCompat="@drawable/ic_graph_cos_24dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/accountDetailActivityMcv"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_20"
        android:visibility="gone"
        app:cardElevation="@dimen/dp_6"
        app:layout_behavior="@string/fab_transformation_sheet_behavior">

        <LinearLayout
            android:id="@+id/accountDetailActivityLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <widget.view.NutritionChartView
                android:id="@+id/accountDetailActivityNcv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_276"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_8" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/accountDetailActivityPc"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_276"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_16" />
        </LinearLayout>

        <widget.view.AccountLineView
            android:id="@+id/accountDetailActivityAav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginBottom="@dimen/dp_16"
            android:visibility="gone"
            app:minSidePadding="@dimen/dp_10" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/accountDetailActivityMb"
            style="?attr/materialIconButtonFilledTonalStyle"
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_30"
            android:layout_gravity="top|end"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:contentDescription="@string/closeEverydayAnalysis"
            android:filterTouchesWhenObscured="true"
            android:insetLeft="@dimen/dp_0"
            android:insetTop="@dimen/dp_0"
            android:insetRight="@dimen/dp_0"
            android:insetBottom="@dimen/dp_0"
            app:icon="@drawable/ic_close_cos_24dp"
            app:iconGravity="textStart"
            app:iconSize="@dimen/dp_15"
            app:iconTint="@color/color_FFF86C09" />
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>